# embedded-hal-mock

./: Cargo.toml  README.md
src/: adc.rs  gpio.rs  i2c.rs  lib.rs  spi.rs  usart.rs
