[package]
authors = ["Reece Stevens <reecestevens24@gmail.com>"]
description = "A small library for mocking embedded devices to ease testing."
edition = "2018"
name = "embedded-hal-mock"
version = "0.1.1"
license = "mit"

[dependencies]
nb = "0.1.1"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]
